# mur_ide

./: CMakeLists.txt
cmake/modules/: windeployqt.cmake
resources/: makeAlias.sh
resources/examples/: auv_led.py  sim_depth_preg.py  sim_hsv.py  sim_yaw_preg.py  usv_led.py
resources/help/: help.md
resources/qml/Ui/: AboutPopup.qml  ApplicationHeader.qml  ApplicationStatusBar.qml  UpdatePopup.qml
sources/: Application.cpp  Application.hxx  ApplicationMenu.cpp  ApplicationMenu.hxx  EditorController.cpp  EditorController.hxx  EditorHighlighter.cpp  LocalScriptsController_unix.cpp  SimulatorController.cpp  UpdateController.cpp
